# syndicate

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  optimized_params.json  pyproject.toml
.github/workflows/: ci.yml
config/: init.sql  settings.json
docs/: ARCHITECTURE.md  BETTING_GUIDE.md  DEVELOPMENT.md  OPERATIONS.md  QUANT.md  RESEARCH_NOTES.md  RESOURCES.md  ROADMAP.md  SCHEMA.md  WHITEPAPER.md
lob-engine/: .gitignore  Cargo.toml  README.md
lob-engine/crates/agent/: Cargo.toml
lob-engine/crates/agent/src/: lib.rs  main.rs  mcp.rs  tools.rs
lob-engine/crates/agent/tests/: mcp_stdio.rs
lob-engine/crates/book/: Cargo.toml
lob-engine/crates/book/benches/: book_bench.rs
lob-engine/crates/book/src/: lib.rs
lob-engine/crates/book/tests/: props.rs
lob-engine/crates/collector/: Cargo.toml
lob-engine/crates/collector/src/: main.rs
lob-engine/crates/replay/: Cargo.toml
lob-engine/crates/replay/examples/: play.rs
lob-engine/crates/replay/src/: lib.rs
lob-engine/crates/sim/: Cargo.toml
lob-engine/crates/sim/examples/: paper.rs
lob-engine/crates/sim/src/: lib.rs
lob-engine/crates/tape/: Cargo.toml
lob-engine/crates/tape/examples/: dump.rs
lob-engine/crates/tape/src/: lib.rs
lob-engine/crates/tui/: Cargo.toml
lob-engine/crates/tui/src/: main.rs
models/: current_ratings.json  model_meta.json  team_state.json  win_prob_model.pkl
notebooks/: 01_defi_explore.ipynb  02_model_eval.ipynb  03_polymarket_eval.ipynb  04_model_predictions.ipynb  05_ensemble_weight_sweep.ipynb  06_model_comms.ipynb  07_mlb_model.ipynb  08_world_cup_model.ipynb  09_nhl_model.ipynb  10_crypto_timeseries.ipynb  11_polymarket_calibration.ipynb  12_funding_carry.ipynb  13_funding_carry_backtest.ipynb  14_crypto_movement_sim.ipynb  README.md
research/: README.md  log_polymarket_divergence.py  polymarket_scan.py
research/arb/: README.md  scan.py
research/defi/: README.md  _common.py  analyze_leadlag.py  backfill_history.py  capture_cex.py  capture_hyperliquid.py  capture_polymarket_book.py  ingest_polymarket_resolved.py  leadlag_candles.py  vol_forecast_sim.py
research/kalshi/: README.md  kalshi_auth.py
research/mlb/: README.md  ingest_mlb.py  ingest_pitcher_logs.py  pitcher_features.py
research/nhl/: README.md  ingest_nhl.py
research/wc/: README.md  ingest_intl.py  soccer_elo.py
scripts/: analyze_clv.py  backfill_intraday_history.py  backfill_odds_history.py  backfill_odds_markets_duckdb.py  backtest.py  backtest_predict_close.py  backtest_steam.py  backup.sh  capture_daily_odds.py  capture_odds_quotes.py  capture_snapshot.py  compute_player_strength.py  evaluate_stats.py  fetch_nba_stats.py  ingest_nba_duckdb.py  ingest_player_stats_duckdb.py  ingest_team_advanced_duckdb.py  measure_algorithms.py  measure_features.py  model_quality.py  monitor_agents.py  offline_dryrun.py  pit_experiment.py  possession_experiment.py  precompute_roster_pit.py  predict_close_experiment.py  render_notebooks.py  render_notebooks.sh  requirements.txt  restore.sh  seed_demo_data.py  steam_validation.py  train_eval_duckdb.py  visualize_backtest.py  visualize_calibration.py  visualize_pnl.py
src/: dashboard.py
src/analytics_engine/: advanced_models.py  arbitrage_engine.py  backfill_manager.py  historical_scraper.py  main.py  math_utils.py  model_trainer.py  optimized_params.json  portfolio_manager.py  rating_optimizer.py  requirements.txt
src/analytics_engine/models/: win_prob_model.pkl
src/oracle_agent/: Dockerfile  main.py
src/scout_agent/: Dockerfile  main.py
src/settlement_agent/: Dockerfile  main.py
src/sniper_agent/: Dockerfile  main.py
src/sportsball/: __init__.py  broker.py  config.py  db.py  logging_conf.py  matching.py  store.py
src/sportsball/agents/: __init__.py  approver.py  engine.py  oracle.py  retrainer.py  scout.py  settlement.py  sniper.py
src/sportsball/markets/: __init__.py  polymarket.py
src/sportsball/notify/: __init__.py  blocks.py  gate.py  slack.py
src/sportsball/pipelines/: __init__.py  _elo.py  backfill.py  backfill_signals.py  bootstrap.py  ingest_injuries.py  ingest_nba.py  ingest_odds.py  optimize.py  retrain.py  sbro_to_feed.py  train.py
src/sportsball/quant/: __init__.py  arbitrage.py  calibration.py  features.py  models.py  odds.py  poisson.py  portfolio.py
src/sportsball/tools/: __init__.py  clv.py  dashboard.py  digest.py  evaluate.py  health.py  smoke.py
src/sportsball/web/: __init__.py  app.py  providers.py
tests/: backtest_pipeline.py  conftest.py  fakes.py  mock_ticks.json  synth.py  test_agent_engine.py  test_agent_producers.py  test_agent_settlement.py  test_agent_sniper.py  test_arbitrage_engine.py  test_availability_integration.py  test_backfill_signals.py  test_backtest.py  test_broker.py  test_compute_player_strength.py  test_config.py  test_ingest_injuries.py  test_ingest_nba.py  test_ingest_odds.py  test_matching.py  test_math_utils.py  test_pipelines_bootstrap.py  test_pipelines_elo.py  test_polymarket.py  test_precompute_roster_pit.py  test_quant_arbitrage.py  test_quant_calibration.py  test_quant_features.py  test_quant_models.py  test_quant_odds.py  test_quant_poisson.py  test_quant_portfolio.py  test_retrain.py  test_sbro_to_feed.py  test_slack_integration.py  test_store.py  test_synth.py  test_tool_clv.py  test_train_eval_duckdb.py  test_web_app.py
