[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsball"
version = "0.2.0"
description = "Autonomous distributed-agent sports-market analytics and paper-trading pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Host-side tooling: visualizations, stats enrichment, tests.
tools = ["matplotlib>=3.8", "pandas>=2.1", "nba_api>=1.4", "pytest>=8.0"]

[project.scripts]
# Each agent and pipeline is exposed as a console entrypoint so the Docker
# image can run `sportsball-<role>` instead of juggling module paths.
sportsball-oracle = "sportsball.agents.oracle:main"
sportsball-scout = "sportsball.agents.scout:main"
sportsball-engine = "sportsball.agents.engine:main"
sportsball-sniper = "sportsball.agents.sniper:main"
sportsball-settlement = "sportsball.agents.settlement:main"
sportsball-retrainer = "sportsball.agents.retrainer:main"
sportsball-dashboard = "sportsball.tools.dashboard:main"
sportsball-health = "sportsball.tools.health:main"
sportsball-clv = "sportsball.tools.clv:main"
sportsball-evaluate = "sportsball.tools.evaluate:main"
sportsball-train = "sportsball.pipelines.train:main"
sportsball-optimize = "sportsball.pipelines.optimize:main"
sportsball-retrain = "sportsball.pipelines.retrain:main"
sportsball-backfill = "sportsball.pipelines.backfill:main"
sportsball-ingest-nba = "sportsball.pipelines.ingest_nba:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sportsball*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
