[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native Rust AI-agent runtime: hand-rolled Anthropic Messages API client + tool-use loop."

[lib]
name = "agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
