[package]
name = "collector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hyperliquid WebSocket market-data collector -> normalized tape."

[[bin]]
name = "collector"
path = "src/main.rs"

[dependencies]
tape = { path = "../tape" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
serde_json = "1"
anyhow = "1"
