[package]
name = "sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Paper-trading ledger: position, cash, PnL, fees, drawdown — fills vs a best bid/ask."

[dependencies]

[dev-dependencies]
replay = { path = "../replay" }
tape = { path = "../tape" }
