[package]
name = "tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The playable trading-sim game: live book ladder + chart + PnL + an AI coach."

[[bin]]
name = "lob-game"
path = "src/main.rs"

[dependencies]
tape = { path = "../tape" }
book = { path = "../book" }
replay = { path = "../replay" }
sim = { path = "../sim" }
agent = { path = "../agent" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
ratatui = "0.29"
crossterm = "0.28"
